k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-api
          image: leaveacrprashant.azurecr.io/auth-service:latest  # Tag will be updated by GitHub Actions
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: auth-service
