k8s/employee-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: employee-service
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      containers:
        - name: employee-api
          image: leaveacrprashant.azurecr.io/employee-service:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: employee-service
