k8s/leave-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leave-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: leave-service
  template:
    metadata:
      labels:
        app: leave-service
    spec:
      containers:
        - name: leave-api
          image: leaveacrprashant.azurecr.io/leave-service:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: leave-service
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: leave-service
